--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,10 @@
+.container {
+    margin: auto;
+    max-width: 40%;
+    padding-top: 4rem;
+}
+
 .title {
     display: flex;
-    margin: 2rem 0 0 0;
     justify-content: center;
 }
