--- a/src/app/components/note/note.component.html
+++ b/src/app/components/note/note.component.html
@@ -1,1 +1,3 @@
-Note
+<h2>Note</h2>
+
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni repellendus, odit, asperiores aperiam, possimus temporibus amet suscipit eaque fugit unde deserunt accusantium at debitis nihil nobis odio eos iure veritatis.</p>
