--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,8 @@
-<h1 class="title">{{ title | titlecase }}</h1>
+<section class="container">
+  <h1 class="title">{{ title | titlecase }}</h1>
+
+  <app-note></app-note>
+  <app-note></app-note>
+  <app-note></app-note>
+  <app-note></app-note>
+</section>
