feat: add card template and data

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
 <section class="container">
   <h1 class="title">{{ title | titlecase }}</h1>
 
-  <app-note></app-note>
-  <app-note></app-note>
-  <app-note></app-note>
-  <app-note></app-note>
+  <app-note 
+    *ngFor="let note of notes$ | async"
+    [note] = "note"
+  >
+  </app-note>
 </section>
