--- a/src/app/components/note/note.component.html
+++ b/src/app/components/note/note.component.html
@@ -1,3 +1,10 @@
-<h2>Note</h2>
+<mat-card class="note">
+    <mat-card-header>
+        <mat-card-title>{{ note.title }}</mat-card-title>
+    </mat-card-header>
 
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni repellendus, odit, asperiores aperiam, possimus temporibus amet suscipit eaque fugit unde deserunt accusantium at debitis nihil nobis odio eos iure veritatis.</p>
+    <mat-card-content>
+        <p>{{ note.text }}</p>
+    </mat-card-content>
+</mat-card>
+
